fix: добавить max-width в profile__info и вернуть overflow:hidden блоку profile__name

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,6 +4,7 @@
     flex-grow: 1;
     gap: 6px;
     padding: 30px 0;
+    max-width: 100%;
 }
 
 @media screen and (min-width: 1280px) {
